# brick_pickup_sm

./: .gitignore  CMakeLists.txt  README.md  package.xml  state_machine.smcat
config/: GlobalPickupStateMachineParameters.cfg  MasterPickupStateMachineParameters.cfg  VisualServoParameters.cfg  VisualServoStateMachineParameters.cfg  global_pickup_sm.yaml  master_pickup_sm.yaml  visual_servo_brick.yaml  visual_servo_brick_sm.yaml
include/brick_pickup_sm/: GlobalPickupStateMachine.hpp  MasterPickupControl.hpp  PickupStateMachine.hpp  PickupStates.hpp  VisualServo.hpp  VisualServoStateMachine.hpp
launch/: brick_spawn.launch  global_brick_pickup.launch  magnet_real.launch  magnet_simulation.launch  master_pickup_control.launch
launch/launch/: global_brick_pickup.launch  master_pickup_control.launch  pickup_servo.launch  visual_servo_brick.launch
models/: brick.urdf
nodes/: GlobalPickupStateNode.cpp  MasterPickupControlNode.cpp  PickupStateNode_trajectory.cpp  VisualServoIdleNode.cpp  VisualServoNode.cpp  VisualServoStateNode.cpp
src/: VisualServo.cpp  brick_spawn.sh  kopter_centroid_patch.py  magnet_activity_sim.py  magnet_override_sim.py
