<?xml version="1.0"?>
<package>
  <name>brick_pickup_sm</name>
  <version>0.0.0</version>
  <description>This repository contains a collection of state machines for a UAV brick pickup scenario.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lovro.markovic@fer.hr">Lovro Markovic</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>uav_ros_control_msgs</build_depend>
  <build_depend>larics_motion_planning</build_depend>
  <build_depend>mbzirc_mission_control</build_depend>
  <build_depend>geographiclib</build_depend>
  <build_depend>geographiclib-tools</build_depend>
  <build_depend>color_filter</build_depend>
  <build_depend>uav_search</build_depend>

  <run_depend>geographiclib</run_depend>
  <run_depend>geographiclib-tools</run_depend>
  <run_depend>uav_search</run_depend>
  <run_depend>color_filter</run_depend>
  <run_depend>uav_ros_control_msgs</run_depend>
  <run_depend>larics_motion_planning</run_depend>
  <run_depend>mbzirc_mission_control</run_depend>  
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
